# my_llm_system

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
src/: async_demo.py  config.py  errors.py  main.py  utils.py
src/llm/: async_client.py  async_local.py  async_mock.py  base.py  client.py  local.py  mock.py  models.py  prompts.py
src/rag/: chunker.py  embedder.py  loader.py  pipeline.py  retriever.py
tests/: test_async_mock_llm.py  test_chunker.py  test_config_validation.py  test_config_validator.py  test_llm_factory.py  test_llm_mock.py  test_main_exit_codes.py  test_models_and_errors.py  test_rag_pipeline.py  test_retriever.py
